Fri, Dec 2, 2022, 3:01 AM +00:00

--- a/templates/history.html
+++ b/templates/history.html
@@ -7,12 +7,10 @@
 {% block main %}
     <table class="table">
         <tr>
-            <th>Symbol</th>
-            <th>Shares</th>
-            <th>Price</th>
+            <th>Amount</th>
+            <th>Category</th>
+            <th>Description</th>
             <th>Date</th>
-            <th>Time</th>
-            <th>PURCHASED/SOLD</th>
         </tr>
         <tbody>
             {% for stock in symbols %}
