--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+    <!DOCTYPE html>
     <html>
     <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -178,5 +180,4 @@
     document.addEventListener("click", closeAllSelect);
     </script>
 </body>
-
 </html>
