--- a/templates/buy.html
+++ b/templates/buy.html
@@ -1,20 +1,134 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Buy
+    About us
 {% endblock %}
 
 {% block main %}
-    <form action="/buy" method="post">
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Stock symbol" type="str">
-        </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="# of shares" type="number">
-        </div>
-        <button class="btn btn-primary" type="submit">Buy stocks</button>
 
-    </form>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
+.mySlides {display:none}
+.w3-tag, .fa {cursor:pointer}
+.w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
+</style>
+<body>
+
+
+<!-- Content -->
+<div class="w3-content" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
+
+  <div class="w3-panel">
+    <h1><b>FinLife</b></h1>
+  </div>
+
+  <!-- Grid -->
+  <div class="w3-row w3-container">
+    <div class="w3-center w3-padding-64">
+      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">What We Offer</span>
+    </div>
+    <div class="w3-col l3 m6 w3-light-grey w3-container w3-padding-16">
+      <h3>Save</h3>
+      <p>FinLife is an application that helps people save more and worry less. Budget management can be simple: after you decide how much you want to spend this month, our platform tracks your spending.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-grey w3-container w3-padding-16">
+      <h3>One Number</h3>
+      <p>You wouldn’t have to worry about calculating how much money you have left to spend this month because we will simplify it to one number, the amount that you have left to spend this month.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-dark-grey w3-container w3-padding-16">
+      <h3>Expertise</h3>
+      <p>Our platform is a product of academic research in psychology and behavioral economics about saving and spending patterns. Now, we use these academic insights to help you save!</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+      <h3>Free</h3>
+      <p>Our platform is free of charge! We hope to help people track their spending, become more financially accountable, and save more. We are college students, that want to help and not to take.</p>
+    </div>
+  </div>
+
+  <!-- Grid -->
+  <div class="w3-row-padding" id="about">
+    <div class="w3-center w3-padding-64">
+      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Who We Are</span>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <div class="w3-container">
+          <h3>Erica Choe</h3>
+          <p class="w3-opacity">Co-Founder and CEO</p>
+          <p>Erica is a Sophomore at Harvard College studying History of Science.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <div class="w3-container">
+          <h3>Marcky Antonio</h3>
+          <p class="w3-opacity">Co-Founder and Head CTO</p>
+          <p>Marcky is a Sophomore at Harvard College studying Integrative Biology and Global Health.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <div class="w3-container">
+          <h3>Nim Ravid</h3>
+          <p class="w3-opacity">Co-Founder and Head of Behavioral Economics</p>
+          <p>Nim is a Sophomore at Harvard College studying Psychology and Economics.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Footer -->
+
+<footer class="w3-container w3-padding-32 w3-light-grey w3-center">
+  <h4>Footer</h4>
+  <a href="#" class="w3-button w3-black w3-margin"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+</footer>
+
+
+<script>
+// Slideshow
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demodots");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length} ;
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " w3-white";
+}
+</script>
+
+</body>
 
 {% endblock %}
 
