Sat, Dec 3, 2022, 10:38 PM +00:00

--- a/templates/sell.html
+++ b/templates/sell.html
@@ -1,3 +1,11 @@
+{% extends "layout.html" %}
+
+{% block title %}
+    sell
+{% endblock %}
+
+{% block main %}
+
 <html>
     <style>
     /*the container must be positioned relative:*/
@@ -178,3 +186,5 @@
       </script>
   </body>
 </html>
+
+{% endblock %}
