Tue, Dec 6, 2022, 3:58 PM +00:00

--- a/templates/sell.html
+++ b/templates/sell.html
@@ -100,7 +100,7 @@
 
             <!--surround the select box with a "custom-select" DIV element. Remember to set the width:-->
             <div class="custom-select" style="width:200px;">
-                <select name="category" id="category" style= float: right>
+                <select name="category" id="category" style= float: right;>
                     <option value="0">Select Category:</option>
                     <option value="1">Food</option>
                     <option value="2">Housing</option>
