--- a/templates/sell.html
+++ b/templates/sell.html
@@ -86,6 +86,7 @@
       document.addEventListener("click", closeAllSelect);
       </script>
 
+
       <body>
         <h2>Spending</h2>
         <!-- Ask for  amount -->
@@ -100,7 +101,7 @@
 
             <!--surround the select box with a "custom-select" DIV element. Remember to set the width:-->
             <div class="custom-select" style="width:200px;">
-                <select name="category" id="category" style= float: right;>
+                <select name="category" id="category" class="right">
                     <option value="0">Select Category:</option>
                     <option value="1">Food</option>
                     <option value="2">Housing</option>
