--- a/templates/sell.html
+++ b/templates/sell.html
@@ -101,7 +101,7 @@
 
             <!--surround the select box with a "custom-select" DIV element. Remember to set the width:-->
             <div class="custom-select" style="width:200px;">
-                <select name="category" id="category" style = left:80px;top:2px;>
+                <select name="category" id="category" class = >
                     <option value="0">Select Category:</option>
                     <option value="1">Food</option>
                     <option value="2">Housing</option>
