Tue, Dec 6, 2022, 4:11 PM +00:00

--- a/static/styles.css
+++ b/static/styles.css
@@ -23,6 +23,7 @@ nav .navbar-brand .green
 }
 
 .middle {
-    position: relative;
-    left: 20px;
+    position:absolute;
+    top: 20px;
+    right:20px;
 }
