Tue, Dec 6, 2022, 4:12 PM +00:00

--- a/static/styles.css
+++ b/static/styles.css
@@ -23,7 +23,6 @@ nav .navbar-brand .green
 }
 
 .middle {
-    position:absolute;
-    top: 20px;
-    right:20px;
+    position: fixed;
+    left: 50%;
 }
